# sfml_clion_project_template

./: README.md
cmake/: CMakeLists.txt
source/: CMakeLists.txt  main.cpp
